fix sign-in and sign-out flew out of screen

--- a/src/common/Style.module.css
+++ b/src/common/Style.module.css
@@ -5,9 +5,10 @@
 
 @media (width >= 772px) {
     .SmartDialog {
-        width: 500px;
+        max-width: 560px;
+        width: calc(100% - 64px);
         height: fit-content;
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -22,7 +23,7 @@
     .SmartDialog {
         min-width: 120px;
         width: 100%;
-        position: absolute;
+        position: relative;
         top: 0px;
         bottom: 0px;
     }
